Replaced fontawesome icons, fixed interviews image for different sizes, added line breaks in footer

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,14 +1,20 @@
-/*-- Google Fonts --*/
+/*------------------------ Google Fonts --*/
 
 @import url('https://fonts.googleapis.com/css?family=Montserrat:300,400,500,700');
 
-/*---HTML & Body --*/
+
+/*-------------------------- General --*/
+.padding {
+    padding-bottom: 2rem;
+}
+
+/*--------------------------HTML & Body --*/
 html, body {
     width: 100%;
     height: 100%;
     font-family: "Montserrat", sans-serif}
 
-/*---Navigation --*/
+/*---------------------------Navigation --*/
 .navbar {
     padding: 0.8rem;
 }
@@ -19,13 +25,74 @@ html, body {
     font-size: 1.1em !important;
 }
 
-/*---Image Slider --*/
+/*----------------------- Image Slider --*/
 .carousel-inner img {
     width: 100%;
     height: 100%;
 }
+.carousel-caption {
+    position: absolute;
+    top: 50%;
+    transform: translateY(-70%);
+}
+.carousel-caption h1 {
+    text-shadow: 1px 1px 15px #000;
+}
+.carousel-caption h3 {
+    font-weight: 500;
+    padding-bottom: 30px;
+    text-shadow: 1px 1px 15px #000;
+}
+.btn-primary {
+    background-color: #b443ff;
+    border: 1px solid #b443ff;
+}
+.btn-primary:hover {
+    background-color: #570091;
+    border: 1px solid #570091;
+}
 
-/*---Media Queries (Sourced From w3newbie) --*/
+/*-------------------------- Welcome Section --*/
+.welcome {
+    width: 75%;
+    margin: 0 auto;
+    padding-top: 2rem;
+}
+
+.welcome hr {
+    border-top: 2px solid #b4b4b4;
+    width: 95%;
+    margin-top: .6rem;
+    margin-bottom: 1rem;
+}
+
+/*-------------------------- Support Section --*/
+/*-------------------------- Font Awesome Styling --*/
+.fa-child {
+    color: #e54d26;
+}
+
+.fa-fire {
+    color: #267fe5;
+}
+
+.fa-globe {
+    color: #02ac1e;
+}
+
+.fa-globe, .fa-fire, .fa-child {
+    font-size:3em;
+    margin: 1rem;
+}
+
+/*-------------------------- Interviews Section --*/
+.img-fluid {
+
+max-width: 100%;
+max-height: 100%;
+}
+
+/*-------------- Media Queries (Sourced From w3newbie) --*/
 @media (max-width: 992px) {
 
   }
@@ -35,12 +102,12 @@ html, body {
 @media (max-width: 576px) {
 
 
-/*--- Bootstrap Padding Fix (Sourced From w3newbie) --*/
+/*---- Bootstrap Padding Fix (Sourced From w3newbie) --*/
 [class*="col-"] {
     padding: 1rem;
 }
 
-/*
+/*--------------
 Extra small (xs) devices (portrait phones, less than 576px)
 No media query since this is the default in Bootstrap
 
@@ -55,4 +122,4 @@ Large (lg) devices (desktops, 992px and up)
 
 Extra (xl) large devices (large desktops, 1200px and up)
 @media (min-width: 1200px) { ... }
-*/
+--------------*/
